Do not start server in init.sh and activate virtualenv in bashrc